fixed z-index

--- a/src/components/Filters/Filters.css
+++ b/src/components/Filters/Filters.css
@@ -62,6 +62,7 @@
   cursor: pointer;
   font-weight: 100;  
   padding: 0.4vw;
+  z-index: 1;
 }
 .filter-button.active {
   border:1px solid #e8d6d5;
